<resources>
    <string name="app_name">Hyper UPnP</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_quit">Quit</string>
    <string name="app_version" translatable="false">0.0.1</string>
    <string name="info_error_list_folders">Error while listening folders</string>
    <string name="info_still_loading">The device is still being loaded, please wait and try again</string>
    <string name="info_could_not_start_activity">Could not start activity</string>
    <string name="info_no_handler">No application for handling this content type available</string>
    <string name="info_folder">Folder</string>
    <string name="info_items">items</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_about_developer">Developer</string>
    <string name="settings_about_developer_name">Var Bhat</string>
    <string name="settings_about_website">Website</string>
    <string name="settings_about_website_url">https://github.com/varbhat/hyperupnp</string>
    <string name="settings_about_developer_url">https://github.com/varbhat</string>
    <string name="search_hint">Search…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="info_file">File</string>
    <string name="settings_title_grid">Grid</string>
    <string name="action_go_up">Go Up</string>
    <string name="action_choose_player">Choose Player to open/stream the File</string>
    <string name="title_choose_player">Choose Player</string>
    <string name="settings_title_player">Player</string>
    <string name="no_mpv_handler">mpv Application Not installed</string>
    <string name="no_vlc_handler">VLC Application Not installed</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_grid_columns">Grid Columns</string>
    <string name="action_pick_random">Pick Random</string>
    <string name="looks_empty">Looks Empty!</string>
    <string name="device_empty">No UPnP Devices Discovered in the Local Network!</string>
    <string name="action_count_items">Count Items</string>
    <string name="action_shuffle">Shuffle Items</string>
    <string name="settings_title_media">Media</string>
    <string name="video_preview">Video Preview</string>
    <string name="enable_video_preview">Preview Video instead of Thumbnails (Resource Intensive)</string>
    <string name="settings_title_cache">Cache</string>
    <string name="settings_cache">Cache Thumbnails</string>
</resources>