<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_pick_random"
        android:orderInCategory="101"
        android:title="@string/action_pick_random" />
    <item
        android:id="@+id/action_count_items"
        android:orderInCategory="102"
        android:title="@string/action_count_items" />
    <item
        android:id="@+id/action_shuffle"
        android:orderInCategory="103"
        android:title="@string/action_shuffle" />
    <item
        android:id="@+id/action_go_up"
        android:orderInCategory="104"
        android:title="@string/action_go_up" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="105"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_quit"
        android:icon="@drawable/ic_quit"
        android:orderInCategory="106"
        android:title="@string/action_quit" />
</menu>